[tool.poetry]
name = "claranet"
version = "0.1.0"
description = "Round 1 for Claranet."
authors = ["Naveen Kumar Reddy Pemmana <mr.naveen8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
pydocstyle = "^6.3.0"
ipython = "^8.14.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["claranet", "tests"]
testpaths = "tests"
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
